@@ -1,3 +1,4 @@
+24. Jun. 2013 - amo - start initial work on context object
 28. May. 2013 - amo - renamed OnStart and OnTearDown to PostConstruct and PreDestroy.
 27. May. 2013 - amo - OnStart, OnHide annotation introduced to mark perspective methods
 06. May. 2013 - amo - Action interface, renamed getLastMessage to getMessage, new method: getTypedMessage, isMessageTypeOf, messageEquals
